# python-project-lvl4

./: .gitignore  .travis.yml  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: main.js
tasks/: admin.py  apps.py  context_processors.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: task_statuses.json
tasks/migrations/: 0001_initial.py  0002_auto_20200212_0955.py  0002_task_status.py  0003_auto_20200211_1941.py
templates/: home.html  layout.html  login.html  register.html  task_create.html  task_detail.html  task_statuses.html  taskstatus_confirm_delete.html  taskstatus_edit.html
templates/components/: favicon.html  footer.html  meta.html  navigation.html  og.html
templates/registration/: login.html  logout.html
templates/tasks/: main.html
users/: admin.py  apps.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
