[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["altvec <me@sergeykalistratov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"
python-dotenv = "^0.15.0"
django-bootstrap4 = "^2.3.1"
rollbar = "^0.15.2"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
django-taggit = "^1.3.0"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
