[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["altvec <me@sergeykalistratov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.2"
python-dotenv = "^0.18.0"
django-bootstrap4 = "^3.0.1"
rollbar = "^0.16.1"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
django-taggit = "^1.5.1"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
