[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["altvec <me@sergeykalistratov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.2"
python-dotenv = "^0.20.0"
django-bootstrap4 = "^21.1"
rollbar = "^0.16.2"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.2"
django-taggit = "^1.5.1"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
coverage = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
